<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="vaida.dryzaite.currencyconverter.ui.converterfragment.ConverterFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/clConverterContainer"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvConverterBalances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_x2"
            android:paddingHorizontal="@dimen/margin_default"
            android:text="@string/converter_balancesLabel"
            android:textAllCaps="true"
            android:textSize="@dimen/label_text_size_small"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvConverterBalances"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_balance"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/tvConverterCurrencyExchange"
            app:layout_constraintTop_toBottomOf="@id/tvConverterBalances"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tvConverterCurrencyExchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_x2"
            android:paddingHorizontal="@dimen/margin_default"
            android:text="@string/converter_exchangeLabel"
            android:textAllCaps="true"
            android:textSize="@dimen/label_text_size_small"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvConverterBalances" />

        <ImageView
            android:id="@+id/ivConverterSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_sell"
            android:padding="@dimen/margin_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConverterCurrencyExchange"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tvConverterSellLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_sellLabel"
            android:textColor="@color/textColor"
            android:textSize="@dimen/label_text_size_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivConverterSell"
            app:layout_constraintStart_toEndOf="@+id/ivConverterSell"
            app:layout_constraintTop_toTopOf="@+id/ivConverterSell" />

        <EditText
            android:id="@+id/etConverterFrom"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:hint="@string/converter_hintText"
            android:textSize="@dimen/label_text_size_medium"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textAlignment="textEnd"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintBottom_toBottomOf="@+id/spConverterFromCurrency"
            app:layout_constraintEnd_toStartOf="@+id/spConverterFromCurrency"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
            app:layout_constraintTop_toTopOf="@+id/spConverterFromCurrency"
            android:autofillHints="Amount"
            android:background="@null" />

        <Spinner
            android:id="@+id/spConverterFromCurrency"
            style="@style/SpinnerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/currency_codes"
            android:padding="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            app:layout_constraintBottom_toBottomOf="@+id/ivConverterSell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConverterCurrencyExchange" />

        <ImageView
            android:id="@+id/ivConverterReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_default"
            android:src="@drawable/btn_receive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivConverterSell"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tvConverterReceiveLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_receiveLabel"
            android:textColor="@color/textColor"
            android:textSize="@dimen/label_text_size_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivConverterReceive"
            app:layout_constraintStart_toEndOf="@+id/ivConverterReceive"
            app:layout_constraintTop_toTopOf="@+id/ivConverterReceive" />

        <TextView
            android:id="@+id/etConverterTo"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:textSize="@dimen/label_text_size_medium"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:gravity="center_vertical|end"
            app:layout_constraintBottom_toBottomOf="@+id/spConverterToCurrency"
            app:layout_constraintEnd_toStartOf="@+id/spConverterToCurrency"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
            app:layout_constraintTop_toTopOf="@+id/spConverterToCurrency"
            android:autofillHints="Amount"
            android:background="@null" />
<!--TODO make font bold-->
        <Spinner
            android:id="@+id/spConverterToCurrency"
            style="@style/SpinnerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/currency_codes"
            android:padding="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            app:layout_constraintBottom_toBottomOf="@+id/ivConverterReceive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivConverterSell" />

        <android.widget.Button
            android:id="@+id/btnConverterConvert"
            style="@style/ColorfulButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_buttonLabel"
            android:textColor="@color/textColorInv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <ProgressBar
            android:id="@+id/progressBarConverter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTint="@color/blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/tvConverterReceiveLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>